// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChipGroup renders correctly with multiple labels 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-33"
  >
    <div
      class="MuiChip-root"
    >
      <span
        class="MuiChip-label"
      >
        Foo
      </span>
    </div>
    <div
      class="MuiChip-root"
    >
      <span
        class="MuiChip-label"
      >
        Bar
      </span>
    </div>
    <div
      class="MuiChip-root"
    >
      <span
        class="MuiChip-label"
      >
        Baz
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChipGroup renders correctly with no labels 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1"
  />
</DocumentFragment>
`;

exports[`ChipGroup renders correctly with one label 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-2"
  >
    <div
      class="MuiChip-root"
    >
      <span
        class="MuiChip-label"
      >
        Foo
      </span>
    </div>
  </div>
</DocumentFragment>
`;
